
AM_CPPFLAGS = -I$(top_srcdir)
AM_CXXFLAGS = -Wall -Wextra

noinst_PROGRAMS = lock-bench shared-lock-test queue-bench \
 task-test thread-test thread_pool-test

lock_bench_SOURCES = lock-bench.cc

shared_lock_test_SOURCES = shared-lock-test.cc

queue_bench_SOURCES = queue-bench.cc

task_test_SOURCES = task-test.cc

thread_test_SOURCES = thread-test.cc

thread_pool_test_SOURCES = thread_pool-test.cc
